[gd_scene load_steps=19 format=3 uid="uid://c14kp5u1y3bh5"]

[ext_resource type="Script" path="res://scenes/battle/battle.gd" id="1_288qv"]
[ext_resource type="Script" path="res://scenes/ui/hand.gd" id="2_hjil5"]
[ext_resource type="PackedScene" uid="uid://b4wdsgh2aijqy" path="res://scenes/player/player.tscn" id="3_evrpq"]
[ext_resource type="PackedScene" uid="uid://cc6mthsq1gvcq" path="res://scenes/card_target_selector/card_target_selector.tscn" id="3_qjby1"]
[ext_resource type="Texture2D" uid="uid://bpbyyecor43jn" path="res://art/IMG_2664.PNG" id="3_yrljf"]
[ext_resource type="Resource" uid="uid://x8pbkjdwqcd4" path="res://characters/warrior/warrior.tres" id="4_fuwk0"]
[ext_resource type="Script" path="res://scenes/ui/battle_ui.gd" id="8_2pg5o"]
[ext_resource type="Script" path="res://scenes/player/player_handler.gd" id="8_bdh5b"]
[ext_resource type="PackedScene" uid="uid://cvvurro71u7fs" path="res://scenes/ui/mana_ui.tscn" id="11_wf68s"]
[ext_resource type="StyleBox" uid="uid://db4xge0pq3axf" path="res://scenes/card_ui/card_base_stylebox.tres" id="12_1nbgn"]
[ext_resource type="PackedScene" uid="uid://bds0ldhpvbn4p" path="res://scenes/ui/tooltip.tscn" id="12_63b1x"]
[ext_resource type="StyleBox" path="res://scenes/card_ui/card_hover_stylebox.tres" id="13_jqtne"]
[ext_resource type="Theme" uid="uid://bbhj0pqw68l31" path="res://main_theme.tres" id="13_sq7d4"]
[ext_resource type="PackedScene" uid="uid://s3nf710um85k" path="res://scenes/ui/lose_screen.tscn" id="14_xgpjy"]
[ext_resource type="PackedScene" uid="uid://cp11ujiu2hfew" path="res://info.tscn" id="15_heimy"]
[ext_resource type="PackedScene" uid="uid://b76e1r2b5eo3a" path="res://lore_screen.tscn" id="16_ke16d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6wrm"]
size = Vector2(250, 100)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5yqh"]
bg_color = Color(0.890196, 0.454902, 0.352941, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Battle" type="Node2D"]
script = ExtResource("1_288qv")
char_stats = ExtResource("4_fuwk0")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.489622, 0.489622, 0.489622, 1)
scale = Vector2(0.12207, 0.125)
texture = ExtResource("3_yrljf")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(125, 50)
shape = SubResource("RectangleShape2D_a6wrm")
debug_color = Color(0, 0.6, 0.701961, 0.133333)

[node name="Player" parent="." instance=ExtResource("3_evrpq")]
position = Vector2(194, 0)
stats = ExtResource("4_fuwk0")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_qjby1")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("8_bdh5b")
hand = NodePath("../BattleUI/Hand")

[node name="InfoButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 238.0
offset_top = 133.0
offset_right = 248.0
offset_bottom = 143.0
theme = ExtResource("13_sq7d4")
theme_override_font_sizes/font_size = 6
text = "?"

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("8_2pg5o")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -30.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("13_sq7d4")
alignment = 1
script = ExtResource("2_hjil5")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("11_wf68s")]
char_stats = ExtResource("4_fuwk0")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_63b1x")]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -72.0
offset_right = -108.0
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w5yqh")

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -25.0
offset_right = -12.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_sq7d4")
theme_override_styles/disabled = ExtResource("12_1nbgn")
theme_override_styles/hover_pressed = ExtResource("13_jqtne")
theme_override_styles/normal = ExtResource("12_1nbgn")
text = "End Turn"

[node name="LoseScreen" type="CanvasLayer" parent="."]

[node name="LoseScreen" parent="LoseScreen" instance=ExtResource("14_xgpjy")]
visible = false

[node name="HowToPlay" type="CanvasLayer" parent="."]

[node name="InfoScreen" parent="HowToPlay" instance=ExtResource("15_heimy")]
visible = false

[node name="Lore" type="CanvasLayer" parent="."]

[node name="LoreScreen" parent="Lore" instance=ExtResource("16_ke16d")]
